# Game_Engine

./: .gitignore  CMakeLists.txt  README.md
Core/: Application.cpp  Application.h  ConsoleLog.cpp  ConsoleLog.h
Editor/: EditorController.cpp  EditorController.h  EditorGui.cpp  EditorGui.h
Input/: Input.cpp  Input.h
Platform/: Window.cpp  Window.h
Renderer/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Material.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Resources/: app.rc
Sandbox/: Main.cpp  PlayerMain.cpp
Scene/: Scene.cpp  Scene.h  Transform.cpp  Transform.h
Shaders/: basic.frag  basic.vert  sky.frag  sky.vert
